--- a/project/package.json
+++ b/project/package.json
@@ -54,6 +54,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "firebase": "^12.2.1",
+    "firebase-admin": "^13.5.0",
     "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.446.0",
